--- a/scss/styles.css
+++ b/scss/styles.css
@@ -136,6 +136,18 @@ html, body {
   background: gray;
 }
 
+.ff-container {
+  position: relative;
+  height: 100%;
+  display: flex;
+}
+
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 .compass {
   position: fixed;
   z-index: 100;
