--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -207,10 +207,6 @@ $wall-height: $offset-top * 2;
 	@include cover();
 }
 
-.left{
-
-}
-
 .right{
 	top: 100%;
 }
@@ -226,6 +222,18 @@ $wall-height: $offset-top * 2;
 	// background: black;
 	transform: translate3d(0, 0, $offset-top);
 	background: gray;
+}
+
+.ff-container{
+	position: relative;
+	height: 100%;
+	display: flex;
+}
+
+img{
+	width: 100%;
+	height: auto;
+	display: block;
 }
 
 
