--- a/css/hexa.css
+++ b/css/hexa.css
@@ -52,13 +52,7 @@ html, body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  transition: background-color 0.2s ease-out 0.15s;
 }
-html.background-black, body.background-black {
-  background-color: black;
-  transition: background-color 0.2s ease-out 0s;
-}
-
 #cross-hair {
   content: "";
   position: fixed;
@@ -185,15 +179,6 @@ body.cross-haired #cross-hair {
   transition: 0.3s;
 }
 
-body.background-black .ceiling .panel,
-body.background-black .floor .panel {
-  opacity: 0.8;
-}
-body.background-black .ceiling .panel:after,
-body.background-black .floor .panel:after {
-  background: black;
-}
-
 #canvas.first .level-1 {
   transform: translateZ(0);
 }
@@ -241,138 +226,30 @@ body.background-black .floor .panel:after {
 .floor:nth-child(1) {
   transform: translate3d(0, 0, 14vw) rotate(-60deg);
 }
-.level-part:nth-child(1) .wall,
-.ceiling:nth-child(1) .wall,
-.floor:nth-child(1) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(1) .wall:before,
-.ceiling:nth-child(1) .wall:before,
-.floor:nth-child(1) .wall:before {
-  content: "0";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
-}
 .level-part:nth-child(2),
 .ceiling:nth-child(2),
 .floor:nth-child(2) {
   transform: translate3d(0, 0, 14vw) rotate(-120deg);
-}
-.level-part:nth-child(2) .wall,
-.ceiling:nth-child(2) .wall,
-.floor:nth-child(2) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(2) .wall:before,
-.ceiling:nth-child(2) .wall:before,
-.floor:nth-child(2) .wall:before {
-  content: "1";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
 }
 .level-part:nth-child(3),
 .ceiling:nth-child(3),
 .floor:nth-child(3) {
   transform: translate3d(0, 0, 14vw) rotate(-180deg);
 }
-.level-part:nth-child(3) .wall,
-.ceiling:nth-child(3) .wall,
-.floor:nth-child(3) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(3) .wall:before,
-.ceiling:nth-child(3) .wall:before,
-.floor:nth-child(3) .wall:before {
-  content: "2";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
-}
 .level-part:nth-child(4),
 .ceiling:nth-child(4),
 .floor:nth-child(4) {
   transform: translate3d(0, 0, 14vw) rotate(-240deg);
-}
-.level-part:nth-child(4) .wall,
-.ceiling:nth-child(4) .wall,
-.floor:nth-child(4) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(4) .wall:before,
-.ceiling:nth-child(4) .wall:before,
-.floor:nth-child(4) .wall:before {
-  content: "3";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
 }
 .level-part:nth-child(5),
 .ceiling:nth-child(5),
 .floor:nth-child(5) {
   transform: translate3d(0, 0, 14vw) rotate(-300deg);
 }
-.level-part:nth-child(5) .wall,
-.ceiling:nth-child(5) .wall,
-.floor:nth-child(5) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(5) .wall:before,
-.ceiling:nth-child(5) .wall:before,
-.floor:nth-child(5) .wall:before {
-  content: "4";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
-}
 .level-part:nth-child(6),
 .ceiling:nth-child(6),
 .floor:nth-child(6) {
   transform: translate3d(0, 0, 14vw) rotate(0deg);
-}
-.level-part:nth-child(6) .wall,
-.ceiling:nth-child(6) .wall,
-.floor:nth-child(6) .wall {
-  color: white;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-.level-part:nth-child(6) .wall:before,
-.ceiling:nth-child(6) .wall:before,
-.floor:nth-child(6) .wall:before {
-  content: "5";
-  position: absolute;
-  z-index: 100;
-  left: 10px;
-  top: 10px;
-  opacity: 0.5;
 }
 .level-part .wall,
 .ceiling .wall,
@@ -465,31 +342,6 @@ video source {
   height: 100%;
 }
 
-.level-2 .level-part:nth-child(1) .target,
-.level-2 .level-part:nth-child(1) .static-img {
-  background-image: url("../img/jpg/1.jpg");
-}
-.level-2 .level-part:nth-child(2) .target,
-.level-2 .level-part:nth-child(2) .static-img {
-  background-image: url("../img/jpg/2.jpg");
-}
-.level-2 .level-part:nth-child(3) .target,
-.level-2 .level-part:nth-child(3) .static-img {
-  background-image: url("../img/jpg/3.jpg");
-}
-.level-2 .level-part:nth-child(4) .target,
-.level-2 .level-part:nth-child(4) .static-img {
-  background-image: url("../img/jpg/4.jpg");
-}
-.level-2 .level-part:nth-child(5) .target,
-.level-2 .level-part:nth-child(5) .static-img {
-  background-image: url("../img/jpg/5.jpg");
-}
-.level-2 .level-part:nth-child(6) .target,
-.level-2 .level-part:nth-child(6) .static-img {
-  background-image: url("../img/jpg/6.jpg");
-}
-
 .level-3 .level-part:nth-child(1) .target,
 .level-3 .level-part:nth-child(1) .static-img {
   background-image: url("../img/png/1.png");
@@ -517,7 +369,8 @@ video source {
 
 img,
 .jsgif,
-canvas {
+canvas,
+video {
   position: absolute;
   top: 0;
   left: 0;
@@ -542,6 +395,7 @@ canvas {
   display: flex;
   overflow: hidden;
   background: gold;
+  opacity: 0.2;
 }
 .compass .viewport {
   position: absolute;
@@ -589,4 +443,25 @@ canvas {
 }
 #compass-x .meter-line.mlx-9 {
   margin-right: 8px;
+}
+
+.elevator-controls {
+  position: absolute;
+  height: 40%;
+  width: 12%;
+  left: 0;
+  top: 50%;
+  transform-origin: 50% 50%;
+  transform: translate3d(-50%, -50%, 0em) rotateY(30deg);
+  background: pink;
+}
+.elevator-controls .elevator-up,
+.elevator-controls .elevator-down {
+  position: absolute;
+  width: 100%;
+  height: 40%;
+  background-color: darkmagenta;
+}
+.elevator-controls .elevator-down {
+  bottom: 0;
 }
