--- a/scss/hexa.scss
+++ b/scss/hexa.scss
@@ -11,14 +11,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   &:before{
-
     content: $name;
     position: absolute;
     z-index: 100;
     left: 10px;
     top: 10px;
     opacity: 0.5;
-    
   }
 }
 
@@ -43,11 +41,11 @@ html, body{
 	width: 100vw;
   overflow: hidden;
   
-  transition: background-color 0.2s ease-out 0.15s;
+  // transition: background-color 0.2s ease-out 0.15s;
 
   &.background-black{
-    background-color: black;  
-    transition: background-color 0.2s ease-out 0s;
+    // background-color: black;  
+    // transition: background-color 0.2s ease-out 0s;
   }
 }
 
@@ -208,10 +206,10 @@ body.background-black{
   .ceiling,
   .floor{
     .panel{
-      opacity: 0.8;
+      // opacity: 0.8;
       
       &:after{
-        background: rgba( black, 1 );
+        // background: rgba( black, 1 );
       }
     }
   } 
@@ -275,32 +273,32 @@ body.background-black{
 
 	&:nth-child(1){
     transform: translate3d(0, 0, $offset-top) rotate(-60deg);
-    .wall{ @include name('0'); }
+    // .wall{ @include name('0'); }
 	}
 
 	&:nth-child(2){
 		transform: translate3d(0, 0, $offset-top) rotate(-120deg);
-    .wall{ @include name('1'); }
+    // .wall{ @include name('1'); }
 	}
 
 	&:nth-child(3){
 		transform: translate3d(0, 0, $offset-top) rotate(-180deg);
-    .wall{ @include name('2'); }
+    // .wall{ @include name('2'); }
 	}
 
 	&:nth-child(4){
 		transform: translate3d(0, 0, $offset-top) rotate(-240deg);
-    .wall{ @include name('3'); }
+    // .wall{ @include name('3'); }
 	}
 
 	&:nth-child(5){
 		transform: translate3d(0, 0, $offset-top) rotate(-300deg);
-    .wall{ @include name('4'); }
+    // .wall{ @include name('4'); }
 	}
 
 	&:nth-child(6){
 		transform: translate3d(0, 0, $offset-top) rotate(0deg);
-    .wall{ @include name('5'); }
+    // .wall{ @include name('5'); }
 	}
 
 	// &:nth-child(1),
@@ -444,13 +442,13 @@ video{
   }
 }
 
-.level-1{
-  // @include createWallpapers( 'gif' );
-}
+// .level-1{
+//    @include createWallpapers( 'gif' );
+// }
 
-.level-2{  
-  @include createWallpapers( 'jpg' );
-}
+// .level-2{  
+//   @include createWallpapers( 'jpg' );
+// }
 
 .level-3{
   @include createWallpapers( 'png' );
@@ -458,7 +456,8 @@ video{
 
 img,
 .jsgif,
-canvas{
+canvas, 
+video{
   position: absolute;
   top: 0;
   left: 0;
@@ -501,4 +500,5 @@ canvas{
 }
 
 @import 'compass.scss';
+@import 'elevator-controls.scss';
 
