--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,5 @@
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 
-// #viewPortSize{
-// 	display: table!important;
-// }
-
-
 @mixin name( $name ){
   color: white;
   font-size: 30px;
@@ -21,9 +16,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 
-
-
-
 ::selection {
     background: black; /* WebKit/Blink Browsers */
     color: white;
@@ -33,6 +25,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     color: white;
 }
 
+
 html, body{
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -40,14 +33,8 @@ html, body{
 	height: 100vh;
 	width: 100vw;
   overflow: hidden;
-  
-  // transition: background-color 0.2s ease-out 0.15s;
-
-  &.background-black{
-    // background-color: black;  
-    // transition: background-color 0.2s ease-out 0s;
-  }
 }
+
 
 #cross-hair{
 	content: '';
@@ -89,7 +76,6 @@ body.cross-haired{
 	color: white;
 	opacity: 0.5;
 
-
 	span{
 		display: inline-table;
 		min-width: 50px;
@@ -101,6 +87,7 @@ body.cross-haired{
 $perspective: 40vw;
 $perspectiveMinus: -1 * $perspective;
 $size: $perspective * 2;
+
 
 #canvas{
 	display: flex;
@@ -202,18 +189,7 @@ $offset-bottom: $wall-height * -1;
 }
 
 
-body.background-black{
-  .ceiling,
-  .floor{
-    .panel{
-      // opacity: 0.8;
-      
-      &:after{
-        // background: rgba( black, 1 );
-      }
-    }
-  } 
-}
+//  
 
 
 #canvas.first{
@@ -273,45 +249,28 @@ body.background-black{
 
 	&:nth-child(1){
     transform: translate3d(0, 0, $offset-top) rotate(-60deg);
-    // .wall{ @include name('0'); }
 	}
 
 	&:nth-child(2){
 		transform: translate3d(0, 0, $offset-top) rotate(-120deg);
-    // .wall{ @include name('1'); }
 	}
 
 	&:nth-child(3){
 		transform: translate3d(0, 0, $offset-top) rotate(-180deg);
-    // .wall{ @include name('2'); }
 	}
 
 	&:nth-child(4){
 		transform: translate3d(0, 0, $offset-top) rotate(-240deg);
-    // .wall{ @include name('3'); }
 	}
 
 	&:nth-child(5){
 		transform: translate3d(0, 0, $offset-top) rotate(-300deg);
-    // .wall{ @include name('4'); }
 	}
 
 	&:nth-child(6){
 		transform: translate3d(0, 0, $offset-top) rotate(0deg);
-    // .wall{ @include name('5'); }
 	}
 
-	// &:nth-child(1),
-	// &:nth-child(2),
-  // &:nth-child(3),
-	// &:nth-child(4),
-	// &:nth-child(5),
-  // &:nth-child(6)
-  // {
-  //   .wall{
-  //   // display: none;
-  //   }
-	// }
 
 	.wall{
 		position: absolute;
@@ -319,15 +278,9 @@ body.background-black{
 		width: 100%;
 		top: 0;
 		left: 0;
-		// background-color: rgba(greenyellow, 0.5);
-		// background-color: rgba(white, 0.5);
 		transform: translate3d(0%, 0% ,$offset-bottom) rotateX(90deg) rotateY(180deg);
     transform-origin: center top;
     transform-style: preserve-3d;
-
-    // &.focus{
-      // opacity: 1;
-    // }
 	}
 }
 
@@ -337,7 +290,7 @@ body.background-black{
 }
 
 
-.static-img,
+.media-container,
 .target{
   transform-style: preserve-3d;
   position: absolute;
@@ -397,8 +350,7 @@ body.background-black{
 
 
 .current-level .level-part.enable-focus.focus{
-
-  .static-img,
+  .media-container,
   .target{
     transform: translateZ(2em);
     transition: 0.35s ease-out 0s;
@@ -425,7 +377,7 @@ body.background-black{
   @for $i from 1 to 7 {
     .level-part:nth-child( #{$i} ){ 
       .target, 
-      .static-img{
+      .media-container{
         background-image: url('../img/#{$suffix}/#{$i}.#{$suffix}');
       }
     }
@@ -476,28 +428,7 @@ canvas{
 	display: flex;
 }
 
-// img{
-// 	width: 100%;
-// 	height: auto;
-//   display: block;
-  
-// }
 
-
-
-// show blank
-#square,
-#x-axis,
-#y-axis,
-#z-axis,
-.level,
-.level-part,
-.wall,
-.target{
-  // width: auto;
-  // transform: none!important;
-  // position: relative!important;
-}
 
 @import 'compass.scss';
 @import 'elevator-controls.scss';
